rook-ceph/service/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cephdash-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ceph.k8s.lenin.nu`)
      kind: Rule
      middlewares:
#      - name: httpsredirect
      - name: ipwhitelist-privnets
      services:
      - name: rook-ceph-mgr-dashboard
        port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cephdash-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: secret-ceph-k8s-lenin-nu
  routes:
  - match: Host(`ceph.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: ipwhitelist-privnets
    services:
    - name: rook-ceph-mgr-dashboard
      port: 8080
